# smart-pest-backend

./: .env  .env.example  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  smart_pest.db
alembic/: env.py
alembic/versions/: a6de5baf20d2_create_users_table.py
app/: config.py  initial_data.py  main.py
app/api/: deps.py
app/api/v1/: auth.py  users.py
app/core/: exceptions.py  security.py
app/crud/: user.py
app/models/: user.py
app/schemas/: user.py
