[project]
name = "smart-pest-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "bcrypt==4.3.0",
    "fastapi[standard]>=0.100.0",
    "greenlet>=3.5.1",
    "psycopg2-binary>=2.9.0",
    "pyjwt==2.10.1",
    "pydantic-settings>=2.0.0",
    "sqlalchemy==2.0.41",
]
